--- a/codecorner.html
+++ b/codecorner.html
@@ -159,10 +159,6 @@
 </template>
 
 
-
-
-
-
 <!--post page-->
 
 <template name="postList">
@@ -172,7 +168,6 @@
     <h1 class="contribute"> Contribute to CodeCorner!</h1>
     <p class="text"> CodeCorner thrives on people like you taking the time to post and contribute to the community. Thanks so much!
     Fill out the following form with the information you want to share. For optional fields, leave them empty if you have nothing to add.</p>
-    <h2> {{{submitted}}} </h2>
   </div>
 
 
@@ -457,8 +452,10 @@
   </div>
 </template>
 
-<template name="codecorner_item_details">
 
+
+
+<template name="codecorner_item_details">
   <div class="container">
     {{Title}}
   </div>
@@ -491,16 +488,102 @@
      <h2 class="postTitle">Code</h2>
      <p class="textarea"> {{code}}</p>
    </li>
-{{#if currentUser}}
+
 <li><div class="container">
-      <button class="btn submit color-primary-0">edit</button>
-      <button id="remove" class="remove btn submit color-primary-2">remove </button>
+      {{#if ownPost}}<a href="/{{_id}}/edit" class="btn submit color-primary-0">edit</a>{{/if}}
+      <!--button id="remove" class="remove btn submit color-primary-2">remove </button-->
     </div></li>
-    {{/if}}
+
 </ul>
 
  <div class="container">
     <h3 class="textarea"> Find more information at {{ url}}. </h3>
  </div>
 
+</template>
+
+
+
+
+<template name="postEdit">
+<div class="container">
+  <div class="container">
+    <h1 class="contribute"> Edit your post</h1>
+    <p class="text"> Do you remember something that you forgot in your post the first time around? Use this form to edit your post. </p>
+  </div>
+
+
+  <!--form class="main">
+    <div class="control-group">
+        <label class="control-label post" for="title">URL</label>
+        <div class="controls">
+            <input name="title" type="text" value="{{title}}" placeholder={{title}}/>
+        </div>
+    </div>
+
+    <div class="control-group">
+        <label class="control-label" for="title tftextinput">Title</label>
+        <div class="controls">
+            <input name="title" type="text" value="{{title}}" placeholder="Name your post"/>
+        </div>
+    </div>
+
+    <div class="control-group">
+        <div class="controls">
+            <input type="submit" value="Submit" class="btn btn-primary submit"/>
+        </div>
+    </div>
+    <hr/>
+    <div class="control-group">
+        <div class="controls">
+            <a id="remove" class="btn remove btn-danger delete" href="#">Delete post</a>
+        </div>
+    </div>
+  </form-->
+
+  <form class="main postTitle">
+
+    <ul id="post" class="container collection">
+      <li id="post" class="collection-item avatar">
+        <div style="width: 90%">
+          <div style="float:left">
+            Title (required): <input placeholder={{title}} type="text"  value="{{title}}" name="title" class="tftextinput" required><br>
+            <br><br>
+
+            <span class="optionaltitles">
+            Categories (optional): <input type="text" value ="{{categories}}" name="categories" class="optional"><br>
+            Image Source (optional): <input type="text" value ="{{img}}" name="img" class="optional"><br>
+            url (optional): <input type="text" name="url" value ="{{url}}" class="optional"><br>
+            </span>
+          </div>
+          <div style="float:right;">
+            <img src="../images/robot_logo.png" alt="robo-logo" style="width:250px;height:250px;padding:10px">
+          </div>
+        </div>
+        <div style="clear:both"></div>
+      </li>
+
+      <li id="post" class="collection-item avatar"> 
+        <h2 class="postTitle">Description</h2>
+        <p class="textarea"> Describe what your post is about here! For example, is it a community announcement? A snippet of code that you want to show the world? A tough project that you've figured out? A question you have? The possibilities are endless!</p>
+        <textarea id="description" form="newpost" name="description" class="type textarea">{{description}}</textarea>
+       </li>
+
+       <li id="post" class="collection-item avatar">
+          <h2 class="postTitle">Code</h2>
+          <p class="textarea">Insert code that is relevant to your post here! Feel free to add comments that explain it either here or in the description section above.</p>
+          <textarea id="code" form="newpost" name="code" class="type textarea">{{code}}</textarea>
+
+       </li>
+     </ul>
+
+       <div class="control-group">
+        <div class="controls">
+            <input type="submit" value="Submit" class="btn btn-primary submit"/>
+            <a id="remove" class="btn remove btn-danger delete" href="#">Delete</a>
+        </div>
+    </div>
+  </form>
+
+  </div>
 </template>
