--- a/codecorner.html
+++ b/codecorner.html
@@ -1,7 +1,7 @@
 <head>
   <title>Code Corner</title>
   <link href='//fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
-  <!--link rel="shortcut icon" type="image/x-icon" href="../images/robot_logo.ico"-->
+  <link rel="shortcut icon" type="image/x-icon" href="../images/robot_logo.ico">
 
 </head>
 
@@ -63,7 +63,7 @@
         <br><br>
         <div class="row center">
             <form  id="tfnewsearch" method="get" action="http://www.google.com" class="center navbar">
-            <input placeholder="Search..." type="text" class="center tftextinput navbar" name="q" size="20" maxlength="120">
+            <input placeholder="Search on Google..." type="text" class="center tftextinput navbar" name="q" size="20" maxlength="120">
             <input type="submit" value="Let's Code it!" class="center tfbutton">
       </form>
     </div>
